# TYP-Legal-Chatbot

./: .gitignore  .pre-commit-config.yaml  README.md  rag_chatbot_folder_updated.html  requirements.txt
backend/: .env.example  pyproject.toml
backend/app/: app_ui.py  main.py
backend/app/api/v1/: __init__.py  chat.py  history.py  ingest.py  search.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: bm25_store.py  mongo.py  vector_db.py
backend/app/evaluation/: data.json  data_with_answers.json  eval.py  gen_data.py  rag_evaluation_results.csv  visuallization.ipynb
backend/app/memory/: history_manager.py  mongo_store.py  session.py
backend/app/models/: __init__.py
backend/app/rag/: chunker.py  embedder.py  generator.py  hybrid_search.py  ingest.py  pipeline.py  pipeline_v0.py  reranker.py  retriever.py  web_search.py
backend/tests/memory/: test_memory.py
frontend/: index.html  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/Chat/: ChatLayout.jsx  MessageBubble.jsx  MessageList.jsx  SuggestCard.jsx  TopBar.jsx  TypingIndicator.jsx  WelcomeScreen.jsx
frontend/src/components/Input/: AttachMenu.jsx  ChatTextarea.jsx  InputArea.jsx  SendButton.jsx  SpeakButton.jsx  VoiceButton.jsx
frontend/src/components/Settings/: SettingsModal.jsx  SettingsTabs.jsx
frontend/src/components/Sidebar/: ConversationItem.jsx  ConversationList.jsx  NewChatButton.jsx  Sidebar.jsx  SidebarFooter.jsx  SidebarHeader.jsx
frontend/src/components/UI/: Avatar.jsx  ThemeToggle.jsx  Tooltip.jsx
frontend/src/components/Voice/: LiveChatPopup.jsx  STTPopup.jsx
frontend/src/context/: ChatContext.jsx  ThemeContext.jsx
frontend/src/hooks/: useAutoScroll.js  useChat.js  useLocalStorage.js  useVoice.js
frontend/src/styles/: animations.css  global.css  livechat-popup.css  stt-popup.css  themes.css
frontend/src/utils/: formatTime.js  generateTitle.js
