[tool.poetry]
name = "rag-chatbot-backend"
version = "0.1.0"
description = "RAG Chatbot backend — Hybrid Search, Reranking, Tavily, MongoDB Memory"
authors = ["TYP Legal Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"

# Web framework
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
python-multipart = "^0.0.9"

# Config
pydantic-settings = "^2.3.0"
python-dotenv = "^1.0.1"

# LLM providers
openai = "^1.35.0"
anthropic = "^0.30.0"

# Embeddings & RAG
tiktoken = "^0.7.0"
langchain = "^0.2.0"
langchain-community = "^0.2.0"
langchain-openai = "^0.1.0"

# Vector DBs (install as needed)
pinecone-client = { version = "^4.1.0", optional = true }
weaviate-client = { version = "^4.6.0", optional = true }
qdrant-client = { version = "^1.10.0", optional = true }

# Sparse / BM25
rank-bm25 = "^0.2.2"

# Reranker
cohere = { version = "^5.5.0", optional = true }
sentence-transformers = { version = "^3.0.0", optional = true }

# Web search
tavily-python = "^0.3.3"

# Database
motor = "^3.4.0"           # async MongoDB driver
pymongo = "^4.8.0"

# Logging & observability
structlog = "^24.2.0"
python-json-logger = "^2.0.7"

# Security
slowapi = "^0.1.9"         # rate limiting
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }

[tool.poetry.extras]
pinecone = ["pinecone-client"]
weaviate = ["weaviate-client"]
qdrant = ["qdrant-client"]
cohere = ["cohere"]
bge = ["sentence-transformers"]
all = ["pinecone-client", "weaviate-client", "qdrant-client", "cohere", "sentence-transformers"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"          # async test client for FastAPI
faker = "^25.9.0"
ruff = "^0.5.0"
mypy = "^1.10.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
